// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/Alerte Avec Class Name 1`] = `
<div
  className="fr-alert fr-m-4w fr-alert--info"
>
  <p>
    des styles supplémentaires peuvent être passés dans le champ \`classname\`, par exemple ici des marges
  </p>
</div>
`;

exports[`Storyshots ui/shared/Alerte Avec Contenu JSX 1`] = `
<div
  className="fr-alert fr-alert--info"
>
  <ul>
    <li>
      contenu JSX passé en 
      <code>
        children
      </code>
       au lieu du champ
       
      <code>
        description
      </code>
    </li>
  </ul>
</div>
`;

exports[`Storyshots ui/shared/Alerte Erreur 1`] = `
<div
  className="fr-alert fr-alert--error"
>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies ante ligula, in ornare mauris faucibus sit amet. Pellentesque iaculis a metus a molestie.
  </p>
</div>
`;

exports[`Storyshots ui/shared/Alerte Information 1`] = `
<div
  className="fr-alert fr-alert--info"
>
  <h3
    className="fr-alert__title"
  >
    Avec un titre
  </h3>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies ante ligula, in ornare mauris faucibus sit amet. Pellentesque iaculis a metus a molestie.
  </p>
</div>
`;

exports[`Storyshots ui/shared/Alerte Succes 1`] = `
<div
  className="fr-alert fr-alert--success"
>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies ante ligula, in ornare mauris faucibus sit amet. Pellentesque iaculis a metus a molestie.
  </p>
</div>
`;

exports[`Storyshots ui/shared/Alerte Warning 1`] = `
<div
  className="fr-alert fr-alert--warning"
>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies ante ligula, in ornare mauris faucibus sit amet. Pellentesque iaculis a metus a molestie.
  </p>
</div>
`;
